--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@ const email = urlParams.get('e');
 // };
 
 
-window.location.href = domain+email;
+// window.location.href = domain+email;
+const result = domain+email;
+console.log('result',result);
 }
 
 setTimeout( function(){
